force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <label>Order Request</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Order Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>