force-app/main/default/objects/Order__c/fields/AccCode__c.field-meta.xml
<CustomField>
    <fullName>AccCode__c</fullName>
    <formula>Account__r.A_C_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A/cCode</label>
    <type>Text</type>
</CustomField>