force-app/main/default/objects/Order__c/fields/Account_TCS_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_TCS_Code__c</fullName>
    <formula>Account__r.TCS_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account TCS Flag Code</label>
    <type>Text</type>
</CustomField>