force-app/main/default/objects/Order__c/fields/ASM_Id__c.field-meta.xml
<CustomField>
    <fullName>ASM_Id__c</fullName>
    <formula>Owner:User.ASM_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASM Employee Code</label>
    <type>Text</type>
</CustomField>