force-app/main/default/objects/Order__c/fields/Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Amount__c</fullName>
    <label>Base Amount</label>
    <summarizedField>Order_Item__c.Non_Taxable_Order_Value__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>