force-app/main/default/objects/Order__c/fields/Beat_Name_New__c.field-meta.xml
<CustomField>
    <fullName>Beat_Name_New__c</fullName>
    <label>Beat Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>