force-app/main/default/objects/Order__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <formula>CASE(
    TEXT(Sales_Organization__c),
				&apos;1300&apos;, &apos;Elite Foods Pvt Ltd.&apos; ,
    &apos;1500&apos;, &apos;Elite Natural Pvt Ltd.&apos;,
    &apos;1100&apos;, &apos;Yamuna Roller Flour Mills Pvt Ltd&apos;,
    &apos;Elite Foods Pvt Ltd.&apos;  /* Default */
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>