force-app/main/default/objects/Order__c/fields/Customer_Location__c.field-meta.xml
<CustomField>
    <fullName>Customer_Location__c</fullName>
    <label>Customer Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>