force-app/main/default/objects/Order__c/fields/Customer_Preference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Preference__c</fullName>
    <label>Customer Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ice Cream</fullName>
            </value>
            <value>
                <fullName>Freezer</fullName>
            </value>
            <value>
                <fullName>Whipping</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>