force-app/main/default/objects/Order__c/fields/Customer_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_SAP_Code__c</fullName>
    <formula>Account__r.SAP_Customer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer SAP Code</label>
    <type>Text</type>
</CustomField>