force-app/main/default/objects/Order__c/fields/DB_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>DB_Bill_Date__c</fullName>
    <label>DB Bill Date</label>
    <type>Date</type>
</CustomField>