force-app/main/default/objects/Order__c/fields/DB_Bill_Number__c.field-meta.xml
<CustomField>
    <fullName>DB_Bill_Number__c</fullName>
    <label>DB Bill Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>