force-app/main/default/objects/Order__c/fields/DB_Bill_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DB_Bill_Quantity__c</fullName>
    <label>DB Bill Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>