force-app/main/default/objects/Order__c/fields/Delivery_To__c.field-meta.xml
<CustomField>
    <fullName>Delivery_To__c</fullName>
    <label>Delivery To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>