force-app/main/default/objects/Order__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Clock_In_Location__Latitude__s)),
        NOT(ISBLANK(Clock_In_Location__Longitude__s)),
        Clock_In_Location__Latitude__s &lt;&gt; 0,
        Clock_In_Location__Longitude__s &lt;&gt; 0,
        NOT(ISBLANK(Customer_Location__Latitude__s)),
        NOT(ISBLANK(Customer_Location__Longitude__s)),
        Customer_Location__Latitude__s &lt;&gt; 0,
        Customer_Location__Longitude__s &lt;&gt; 0
    ),
    DISTANCE(
        GEOLOCATION(Customer_Location__Latitude__s, Customer_Location__Longitude__s),
        GEOLOCATION(Clock_In_Location__Latitude__s, Clock_In_Location__Longitude__s),
        &apos;km&apos;
    ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>