force-app/main/default/objects/Order__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Distributor)</relationshipLabel>
    <relationshipName>Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>