force-app/main/default/objects/Order__c/fields/Distributor_with_Code__c.field-meta.xml
<CustomField>
    <fullName>Distributor_with_Code__c</fullName>
    <formula>Distributor__r.Name +&apos;( &apos; + Distributor__r.SAP_Customer_Code__c +&apos; )&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor with Code</label>
    <type>Text</type>
</CustomField>