force-app/main/default/objects/Order__c/fields/DISTRICT__c.field-meta.xml
<CustomField>
    <fullName>DISTRICT__c</fullName>
    <formula>TEXT(Account__r.District__c)</formula>
    <label>DISTRICT</label>
    <type>Text</type>
</CustomField>