force-app/main/default/objects/Order__c/fields/Document_number__c.field-meta.xml
<CustomField>
    <fullName>Document_number__c</fullName>
    <label>Document number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>