force-app/main/default/objects/Order__c/fields/Encore_SyncSuccess__c.field-meta.xml
<CustomField>
    <fullName>Encore_SyncSuccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Encore SyncSuccess</label>
    <type>Checkbox</type>
</CustomField>