force-app/main/default/objects/Order__c/fields/ERP_Check__c.field-meta.xml
<CustomField>
    <fullName>ERP_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ERP_Check</label>
    <type>Checkbox</type>
</CustomField>