force-app/main/default/objects/Order__c/fields/Executive_Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Executive_Employee_Code__c</fullName>
    <formula>Owner:User.Employee_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executive Employee Code</label>
    <type>Text</type>
</CustomField>