force-app/main/default/objects/Order__c/fields/Is_Partner_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Partner_User__c</fullName>
    <formula>$User.ContactId ==  Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Partner User</label>
    <type>Checkbox</type>
</CustomField>