force-app/main/default/objects/Order__c/fields/Is_request_sent__c.field-meta.xml
<CustomField>
    <fullName>Is_request_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is request sent</label>
    <type>Checkbox</type>
</CustomField>