force-app/main/default/objects/Order__c/fields/lead__c.field-meta.xml
<CustomField>
    <fullName>lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>