force-app/main/default/objects/Order__c/fields/Order_External__c.field-meta.xml
<CustomField>
    <fullName>Order_External__c</fullName>
    <label>Order_External</label>
    <length>200</length>
    <type>Text</type>
</CustomField>