force-app/main/default/objects/Order__c/fields/Order_Fulfillment_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Fulfillment_Status__c</fullName>
    <label>Order Fulfillment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>order_status</valueSetName>
    </valueSet>
</CustomField>