force-app/main/default/objects/Order__c/fields/Order_Fulfillment_visit__c.field-meta.xml
<CustomField>
    <fullName>Order_Fulfillment_visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Fulfillment visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Orders (Order Fulfillment visit)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>