force-app/main/default/objects/Order__c/fields/Order_Id_Text__c.field-meta.xml
<CustomField>
    <fullName>Order_Id_Text__c</fullName>
    <externalId>true</externalId>
    <label>Order Id Text</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>