force-app/main/default/objects/Order__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Not In Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Created</fullName>
                <default>true</default>
                <label>Order Created</label>
            </value>
            <value>
                <fullName>Order Sent to ERP</fullName>
            </value>
            <value>
                <fullName>Achnowledged</fullName>
                <isActive>false</isActive>
                <label>Achnowledged</label>
            </value>
            <value>
                <fullName>Billing</fullName>
                <isActive>false</isActive>
                <label>Billing</label>
            </value>
            <value>
                <fullName>Close</fullName>
                <isActive>false</isActive>
                <label>Close</label>
            </value>
            <value>
                <fullName>Delivered</fullName>
                <isActive>false</isActive>
                <label>Delivered</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Order Placed</fullName>
                <isActive>false</isActive>
                <label>Order Placed</label>
            </value>
            <value>
                <fullName>Packing</fullName>
                <isActive>false</isActive>
                <label>Packing</label>
            </value>
            <value>
                <fullName>Payment</fullName>
                <isActive>false</isActive>
                <label>Payment</label>
            </value>
            <value>
                <fullName>Shipping</fullName>
                <isActive>false</isActive>
                <label>Shipping</label>
            </value>
            <value>
                <fullName>Stock Check</fullName>
                <isActive>false</isActive>
                <label>Stock Check</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>