force-app/main/default/objects/Order__c/fields/Orderfulfilment_Date__c.field-meta.xml
<CustomField>
    <fullName>Orderfulfilment_Date__c</fullName>
    <label>Order Fulfilment Date</label>
    <type>Date</type>
</CustomField>