force-app/main/default/objects/Order__c/fields/Outlet_Id__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Id__c</fullName>
    <formula>IF(
NOT(ISBLANK(Account__r.Outlet_Id__c)),
Account__r.Outlet_Id__c,
Account__r.Customer_Code__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet Id</label>
    <type>Text</type>
</CustomField>