force-app/main/default/objects/Order__c/fields/Outlet_Id_Search__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Id_Search__c</fullName>
    <label>Outlet Id Search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>