force-app/main/default/objects/Order__c/fields/owner_code__c.field-meta.xml
<CustomField>
    <fullName>owner_code__c</fullName>
    <label>owner_code</label>
    <length>150</length>
    <type>Text</type>
</CustomField>