force-app/main/default/objects/Order__c/fields/Owner_Code_Search__c.field-meta.xml
<CustomField>
    <fullName>Owner_Code_Search__c</fullName>
    <label>Owner Code Search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>