force-app/main/default/objects/Order__c/fields/OwnerCode__c.field-meta.xml
<CustomField>
    <fullName>OwnerCode__c</fullName>
    <formula>Owner:User.Employee_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerCode</label>
    <type>Text</type>
</CustomField>