force-app/main/default/objects/Order__c/fields/PDP_Other_Type__c.field-meta.xml
<CustomField>
    <fullName>PDP_Other_Type__c</fullName>
    <label>PDP Other Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>