force-app/main/default/objects/Order__c/fields/PJP_Non_PJP_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>PJP_Non_PJP_Order_Type__c</fullName>
    <formula>IF(Visit__c != null , &apos;PJP Order&apos; , &apos;Non PJP Order&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PJP Non PJP Order Type</label>
    <type>Text</type>
</CustomField>