force-app/main/default/objects/Order__c/fields/PO_DATE__c.field-meta.xml
<CustomField>
    <fullName>PO_DATE__c</fullName>
    <label>PO_DATE</label>
    <type>Date</type>
</CustomField>