force-app/main/default/objects/Order__c/fields/PO_NUM__c.field-meta.xml
<CustomField>
    <fullName>PO_NUM__c</fullName>
    <label>PO_NUM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>