force-app/main/default/objects/Order__c/fields/Push_to_Logistics__c.field-meta.xml
<CustomField>
    <fullName>Push_to_Logistics__c</fullName>
    <label>Push to Logistics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>