force-app/main/default/objects/Order__c/fields/Pushed_by_System__c.field-meta.xml
<CustomField>
    <fullName>Pushed_by_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pushed by System</label>
    <type>Checkbox</type>
</CustomField>