force-app/main/default/objects/Order__c/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <label>Sales_Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>