force-app/main/default/objects/Order__c/fields/Secondary_Invoice_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Invoice_Quantity__c</fullName>
    <label>Secondary Invoice Quantity</label>
    <summarizedField>Order_Item__c.Secondary_Invoice_Quantitty__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>