force-app/main/default/objects/Order__c/fields/Secondary_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Invoice_Status__c</fullName>
    <formula>IF(
    Secondary_Invoice_Quantity__c = 0,
    &quot;Invoice Pending&quot;,
    IF(
        Secondary_Invoice_Quantity__c &gt;= Total_Quantity__c,
        &quot;Fully Invoiced&quot;,
        &quot;Partially Invoiced&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Invoice Status</label>
    <type>Text</type>
</CustomField>