force-app/main/default/objects/Order__c/fields/SiteName__c.field-meta.xml
<CustomField>
    <fullName>SiteName__c</fullName>
    <formula>Site__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SiteName</label>
    <type>Text</type>
</CustomField>