force-app/main/default/objects/Order__c/fields/SNUM__c.field-meta.xml
<CustomField>
    <fullName>SNUM__c</fullName>
    <label>SNUM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>