force-app/main/default/objects/Order__c/fields/Sub_Stockiest__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stockiest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Stockiest</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Sub Stockiest)</relationshipLabel>
    <relationshipName>Orders4</relationshipName>
    <type>Lookup</type>
</CustomField>