force-app/main/default/objects/Order__c/fields/TLSD__c.field-meta.xml
<CustomField>
    <fullName>TLSD__c</fullName>
    <label>TLSD</label>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>