force-app/main/default/objects/Order__c/fields/Total_Weight_in_KG__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_in_KG__c</fullName>
    <label>Total Weight in KG</label>
    <summarizedField>Order_Item__c.Order_Item_Weight__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>