force-app/main/default/objects/Order__c/fields/Visit_for1__c.field-meta.xml
<CustomField>
    <fullName>Visit_for1__c</fullName>
    <formula>TEXT( Visit_for__c )</formula>
    <label>Order For</label>
    <type>Text</type>
</CustomField>