force-app/main/default/objects/Order__c/fields/Visit_for__c.field-meta.xml
<CustomField>
    <fullName>Visit_for__c</fullName>
    <label>Order for</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Modern Trade</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Primary Customer</fullName>
            </value>
            <value>
                <fullName>Secondary Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>