force-app/main/default/objects/Order__c/fields/YearCode__c.field-meta.xml
<CustomField>
    <fullName>YearCode__c</fullName>
    <label>YearCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>