force-app/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_Type__c</columns>
    <columns>Delivery_To__c</columns>
    <columns>Expected_Delivery_Date__c</columns>
    <columns>Delivery_Plant__c</columns>
    <columns>PDP_Other_Type__c</columns>
    <columns>Order_Type1__c</columns>
    <columns>Distributor__c</columns>
    <columns>Sales_Channel__c</columns>
    <columns>Sub_Stockiest__c</columns>
    <columns>Grand_Total__c</columns>
    <columns>Account__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>