force-app/main/default/objects/Order__c/listViews/Back_To_Back_Orders.listView-meta.xml
<ListView>
    <fullName>Back_To_Back_Orders</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Order_Type__c</columns>
    <columns>Order_Fulfillment_Status__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>Delivery_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Fulfillment_Status__c</field>
        <operation>equals</operation>
        <value>Back-To-Back</value>
    </filters>
    <label>Back To Back Orders</label>
</ListView>